--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bdist_wheel]
-universal=1
+universal=0
 
 [metadata]
-description-file=README.md
+description-file=README.rst
 license_file=LICENSE
