--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "openpty",
         "ptyng"
     ],
-    "restructuredtext.confPath": ""
+    "restructuredtext.confPath": "",
+    "python.linting.pylintEnabled": true
 }
