New distribution 0.3.1  - fixed bugs when killing spawned process  - formatted code  - update README  - revised setup.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,33 @@
 {
-    "python.pythonPath": "/Users/jarryshaw/.local/share/virtualenvs/ptyng-pFkoxdfX/bin/python",
+    "python.pythonPath": "/Users/jarryshaw/.virtualenvs/ptyng-pFkoxdfX/bin/python",
     "cSpell.words": [
+        "FILENO",
+        "PQRST",
+        "RDWR",
+        "SIGKILL",
+        "TCSAFLUSH",
+        "chld",
         "emsp",
+        "execve",
+        "execvpe",
+        "fcntl",
+        "forkpty",
+        "ioctl",
         "iszombie",
+        "ldterm",
         "openpty",
-        "ptyng"
+        "pgrep",
+        "ppid",
+        "pqrstuvwxyz",
+        "pqrstuvwxyzPQRST",
+        "ptem",
+        "ptyng",
+        "rfds",
+        "tcgetattr",
+        "tcsetattr",
+        "ttyname",
+        "waitpid",
+        "writen"
     ],
     "restructuredtext.confPath": "",
     "python.linting.pylintEnabled": true
