New distribution [0.3.3.post1]
 - lint files
 - bugfix in make.sh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "python.pythonPath": "/Users/jarryshaw/.virtualenvs/ptyng-pFkoxdfX/bin/python",
     "cSpell.words": [
         "FILENO",
         "PQRST",
@@ -29,6 +28,6 @@
         "waitpid",
         "writen"
     ],
-    "restructuredtext.confPath": "",
-    "python.linting.pylintEnabled": true
+    "python.linting.pylintEnabled": true,
+    "python.pythonPath": "/Users/jarryshaw/.virtualenvs/ptyng-pFkoxdfX/bin/python"
 }
